Added created and updated datetime in backend in order service

--- a/DataAccessLayer/OrderingBooking.Data.csproj
+++ b/DataAccessLayer/OrderingBooking.Data.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EntityLayer\Entitites.csproj" />
+    <ProjectReference Include="..\EntityLayer\OrderingBooking.Entities.csproj" />
   </ItemGroup>
 
 </Project>
