--- a/OrderingBookingModule/OrderingBooking.API.csproj
+++ b/OrderingBookingModule/OrderingBooking.API.csproj
@@ -31,7 +31,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BuisnessLogicLayer\OrderingBooking.BL.csproj" />
-    <ProjectReference Include="..\EntityLayer\Entitites.csproj" />
+    <ProjectReference Include="..\EntityLayer\OrderingBooking.Entities.csproj" />
   </ItemGroup>
 
   <ItemGroup>
