--- a/.github/workflows/dev_app-orderbooking-dev.yml
+++ b/.github/workflows/dev_app-orderbooking-dev.yml
@@ -1,12 +1,12 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - app-orderbooking-dev
+name: CI_CD dev-backend (push)
 
 on:
   push:
     branches:
-      - dev
+      - dev-backend
   workflow_dispatch:
 
 jobs:
